@@ -309,7 +309,7 @@ proc hedeby_check_distinst {} {
 
    set path "$hedeby_config(hedeby_product_root)/lib/sdm-test.jar"
    if {[is_remote_file $java_build_host [get_hedeby_admin_user] $path] == 0} {
-      ts_log_config "Product root \"$hedeby_config(hedeby_product_root)\" doesn't contain sdm-test.jar file in ./lib directory - executor test will fail"
+      ts_log_info "Product root \"$hedeby_config(hedeby_product_root)\" doesn't contain sdm-test.jar file in ./lib directory - executor test is unsupported"
 
 # TODO: This is tmp fix for sdm-test.jar issue. We should in general test without sdm-test.jar, because it is not part of distribution! 
 #       For the executor test the sdm-test.jar might be temporarly copied (manually). We must find a solution here
@@ -328,7 +328,7 @@ proc hedeby_check_distinst {} {
 #         add_proc_error "hedeby_check_distinst" -2 "File \"$source_path\" not found. Please compile hedeby with testsuite first!"
 #      }
    } else {
-      add_proc_error "hedeby_check_distinst" -2 "Product root \"$hedeby_config(hedeby_product_root)\" contains sdm-test.jar file in ./lib directory - please remove it for testing"
+      ts_log_warning "Product root \"$hedeby_config(hedeby_product_root)\" contains sdm-test.jar file in ./lib directory - please remove it for testing"
    }
 }
 
